# Karnelos

./: .gitignore  Dockerfile  Makefile  README.md  x86_64-unknown-none
daemon/: Cargo.toml
daemon/src/: main.rs
generator/: Cargo.toml
generator/src/: main.rs
kernel/: Cargo.toml  x86_64-karnelos.json
kernel/.cargo/: config.toml
kernel/builder/: Cargo.toml
kernel/builder/src/: main.rs
kernel/src/: acpi.rs  ata.rs  filesystem.rs  generated.rs  interrupts.rs  io.rs  keyboard.rs  loader.rs  main.rs  memory.rs  metrics.rs  process.rs  shell.rs  smp.rs  userspace.rs
roadmap/: README.md  architecture.md  phases.md  scope.md  tech-stack.md
scripts/: bootstrap.sh  run.sh
tools/: cargo
tools/mkimage/: Cargo.toml  build.rs
tools/mkimage/src/: main.rs
userspace/: Cargo.toml  karnelos-user.json  linker.ld
userspace/.cargo/: config.toml
userspace/src/: main.rs  rt.rs  syscall.rs
