[package]
name = "karnelos-kernel"
version = "0.1.0"
edition = "2021"

[dependencies]
bootloader = "0.9"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[package.metadata.bootimage]
build-command = ["build", "--target", "x86_64-unknown-none"]
run-command = ["qemu-system-x86_64", "-drive", "format=raw,file={}"]
