[package]
name = "karnelos-kernel"
version = "0.1.0"
edition = "2021"

[dependencies]
bootloader = { version = "0.9", features = ["map_physical_memory"] }
x86_64 = "0.14"
pic8259 = "0.10"
spin = "0.9"
linked_list_allocator = "0.10"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[package.metadata.bootimage]
build-command = ["build", "--target", "x86_64-unknown-none"]
run-command = ["qemu-system-x86_64", "-drive", "format=raw,file={}"]
